Added `haelwic village lwp`

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             <img src="assets/images/apps/icon_sudoku.png" alt="Sudoku App Icon" class="app-icon">
             <h3 class="app-title">Sudoku</h3>
           </div>
-          <p class="app-description">Sharpen your mind and test your logic with the classic number puzzle. Enjoy endless
-            challenges and difficulty levels.</p>
+          <p class="app-description">
+            Sharpen your mind and test your logic with the classic number puzzle. Enjoy endless challenges and difficulty levels.
+          </p>
         </a>
       </div>
 
@@ -68,8 +69,9 @@
             <img src="assets/images/apps/icon_lwp_aquarium.png" alt="Aquarium LWP App Icon" class="app-icon">
             <h3 class="app-title">Aquarium LWP</h3>
           </div>
-          <p class="app-description">Bring a vibrant underwater world to your device screen. Relax and unwind with
-            mesmerizing animations and soothing sounds.</p>
+          <p class="app-description">
+            Bring a vibrant underwater world to your device screen. Relax and unwind with mesmerizing animations and soothing sounds.
+          </p>
         </a>
       </div>
 
@@ -79,14 +81,26 @@
             <img src="assets/images/apps/icon_chess_clock.png" alt="Chess Clock App Icon" class="app-icon">
             <h3 class="app-title">Chess Clock</h3>
           </div>
-          <p class="app-description">Keep track of your time in chess matches with this easy-to-use and customizable
-            clock. Perfect for players of all levels.</p>
+          <p class="app-description">
+            Keep track of your time in chess matches with this easy-to-use and customizable clock. Perfect for players of all levels.
+          </p>
+        </a>
+      </div>
+
+      <div class="app-card">
+        <a href="https://app.zeoowl.com/live-wallpaper/haelwic-village">
+          <div class="app-card-header">
+            <img src="/assets/og/live-wallpaper-haelwic-village-og-icon.png" alt="Haelwic Village LWP App Icon" class="app-icon">
+            <h3 class="app-title">Haelwic Village LWP</h3>
+          </div>
+          <p class="app-description">
+            Transform your home screen into a charming, customizable fantasy village with Haelwic Village Live Wallpaper! Craft houses, explore landscapes, & more.
+          </p>
         </a>
       </div>
     </div>
   </section>
 </div>
-</body>
 <footer class="footer">
   <div class="footer-line"></div>
   <div class="footer-sitemap">
@@ -100,6 +114,7 @@
       <a href="https://app.zeoowl.com/live-wallpaper/aquarium" class="footer-item">Aquarium LWP</a><br>
       <a href="https://app.zeoowl.com/chess-clock" class="footer-item">Chess Clock</a><br>
       <a href="https://app.zeoowl.com/sudoku" class="footer-item">Sudoku</a><br>
+      <a href="https://app.zeoowl.com/live-wallpaper/haelwic-village" class="footer-item">Haelwic Village LWP</a><br>
     </section>
     <section>
       <a href="https://policies.zeoowl.com/" class="footer-category">Privacy & Terms</a><br>
@@ -113,4 +128,5 @@
     <p>&copy; 2024 ZeoOwl. All rights reserved.</p>
   </div>
 </footer>
+</body>
 </html>
