--- a/live-wallpaper/haelwic-village.html
+++ b/live-wallpaper/haelwic-village.html
@@ -12,22 +12,22 @@
   <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
   <link href="/site.webmanifest" rel="manifest">
 
-  <title>Sudoku | Apps by ZeoOwl</title>
-  <meta name="description" content="Challenge your mind and sharpen your logic with Sudoku, the classic number-placement puzzle game! Enjoy endless variations, intuitive controls, and track your progress with ZeoOwl's Sudoku app. Download now and start solving!">
-  <meta name="keywords" content="Sudoku, Puzzle Game, Number Placement, Logic, Brain Training, Mind Sharpening, Classic Game, Endless Variations, Intuitive Controls, Progress Tracking, Mobile App, Android App, ZeoOwl">
+  <title>Haelwic Village Live Wallpaper | Apps by ZeoOwl</title>
+  <meta name="description" content="Build your dream fantasy village on your home screen with Haelwic Village Live Wallpaper! Craft charming houses, explore lush landscapes, and personalize your world with weather effects and dynamic elements.">
+  <meta name="keywords" content="Haelwic Village Live Wallpaper, Live Wallpaper, Fantasy Wallpaper, Village Builder, Home Screen Customization, Fantasy RPG, Charming Houses, Lush Landscapes, Weather Effects, Dynamic Elements, Magic, Personalization, Immersive, Beautiful, Relaxing">
 
-  <meta property="og:title" content="Sudoku | Apps by ZeoOwl">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://app.zeoowl.com/sudoku">
-  <meta property="og:description" content="Challenge your mind and sharpen your logic with Sudoku, the classic number-placement puzzle game! Enjoy endless variations, intuitive controls, and track your progress with ZeoOwl's Sudoku app. Download now and start solving!">
-  <meta property="og:image" content="https://app.zeoowl.com/assets/og_sudoku.jpg">
+  <meta property="og:title" content="Haelwic Village Live Wallpaper | Apps by ZeoOwl" />
+  <meta property="og:description" content="Transform your home screen into a charming, customizable fantasy village with Haelwic Village Live Wallpaper! Craft houses, explore landscapes, & more. Download now: link.zeoowl.com/live-wallpaper/haelwic-village" />
+  <meta property="og:image" content="https://app.zeoowl.com/assets/og/live-wallpaper-haelwic-village-og-cover.png" />
+  <meta property="og:url" content="app.zeoowl.com/live-wallpaper/haelwic-village" />
+  <meta property="og:site_name" content="ZeoOwl App" />
 
-  <meta name="twitter:title" content="Sudoku | Apps by ZeoOwl">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://app.zeoowl.com/sudoku">
-  <meta name="twitter:description" content="Challenge your mind and sharpen your logic with Sudoku, the classic number-placement puzzle game! Enjoy endless variations, intuitive controls, and track your progress with ZeoOwl's Sudoku app. Download now and start solving!">
-  <meta name="twitter:image" content="https://app.zeoowl.com/assets/og_sudoku.jpg">
-
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Haelwic Village Live Wallpaper | Apps by ZeoOwl" />
+  <meta name="twitter:description" content="Transform your home screen into a charming, customizable fantasy village with Haelwic Village Live Wallpaper! Craft houses, explore landscapes, & more. Download now: link.zeoowl.com/live-wallpaper/haelwic-village" />
+  <meta name="twitter:image" content="https://app.zeoowl.com/assets/og/live-wallpaper-haelwic-village-og-cover.png" />
+  <meta name="twitter:site" content="ZeoOwl App" />
   <!-- Styles -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -48,16 +48,16 @@
 <div class="content-wrapper">
   <section class="hero">
     <div class="banner-container">
-      <img src="assets/images/banner/banner-chess-clock.png" alt="Sudoku App Banner">
+      <img src="/assets/og/live-wallpaper-haelwic-village-og-cover.png" alt="Haelwic Village Live Wallpaper App Banner">
     </div>
     <div class="hero-content">
       <div class="app-details-icon-wrapper">
-        <img src="/assets/images/apps/icon_sudoku.png" alt="Sudoku App Icon" class="app-details-icon">
-        <img src="/assets/images/apps/icon_sudoku.png" alt="Sudoku App Icon" class="app-details-icon app-details-icon-shadow">
+        <img src="/assets/og/live-wallpaper-haelwic-village-og-icon.png" alt="Haelwic Village Live Wallpaper App Icon" class="app-details-icon">
+        <img src="/assets/og/live-wallpaper-haelwic-village-og-icon.png" alt="Haelwic Village Live Wallpaper App Icon" class="app-details-icon app-details-icon-shadow">
       </div>
-      <h1 class="app-details-title">Sudoku</h1>
-      <p>Challenge yourself with the classic number-placement puzzle. Enjoy endless variations, from beginner to expert levels.</p>
-      <a href='https://play.google.com/store/apps/details?id=com.zeoowl.sudoku&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class="play-store-badge">
+      <h1 class="app-details-title">Haelwic Village Live Wallpaper</h1>
+      <p>Transform your home screen into a charming, customizable fantasy village with Haelwic Village Live Wallpaper! Craft houses, explore landscapes, & more.</p>
+      <a href='https://play.google.com/store/apps/details?id=com.zeoowl.lwp.haelwic.village&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class="play-store-badge">
         <img
           alt='Get it on Google Play'
           src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/>
