--- a/chess-clock.html
+++ b/chess-clock.html
@@ -78,6 +78,7 @@
       <a href="https://app.zeoowl.com/live-wallpaper/aquarium" class="footer-item">Aquarium LWP</a><br>
       <a href="https://app.zeoowl.com/chess-clock" class="footer-item">Chess Clock</a><br>
       <a href="https://app.zeoowl.com/sudoku" class="footer-item">Sudoku</a><br>
+      <a href="https://app.zeoowl.com/live-wallpaper/haelwic-village" class="footer-item">Haelwic Village LWP</a><br>
     </section>
     <section>
       <a href="https://policies.zeoowl.com/" class="footer-category">Privacy & Terms</a><br>
