--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
           </p>
         </a>
       </div>
+
+      <div class="app-card">
+        <a href="https://app.zeoowl.com/live-wallpaper/tropical-island">
+          <div class="app-card-header">
+            <img src="/assets/og/live-wallpaper-tropical-island-og-icon.png" alt="Tropical Island LWP App Icon" class="app-icon">
+            <h3 class="app-title">Tropical Island LWP</h3>
+          </div>
+          <p class="app-description">
+            Escape to a low-poly paradise with Tropical Island Live Wallpaper! Relax on a stunning beach, explore charming buildings, and find tranquility by the pool. Personalize your island with day and night themes and adjust the animation speed for ultimate relaxation. Download now and let your worries melt away!
+          </p>
+        </a>
+      </div>
     </div>
   </section>
 </div>
@@ -115,6 +127,7 @@
       <a href="https://app.zeoowl.com/chess-clock" class="footer-item">Chess Clock</a><br>
       <a href="https://app.zeoowl.com/sudoku" class="footer-item">Sudoku</a><br>
       <a href="https://app.zeoowl.com/live-wallpaper/haelwic-village" class="footer-item">Haelwic Village LWP</a><br>
+      <a href="https://app.zeoowl.com/live-wallpaper/tropical-island" class="footer-item">Tropical Island LWP</a><br>
     </section>
     <section>
       <a href="https://policies.zeoowl.com/" class="footer-category">Privacy & Terms</a><br>
