--- a/live-wallpaper/tropical-island.html
+++ b/live-wallpaper/tropical-island.html
@@ -12,21 +12,22 @@
   <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
   <link href="/site.webmanifest" rel="manifest">
 
-  <title>Aquarium Live Wallpaper | Apps by ZeoOwl</title>
-  <meta name="description" content="Immerse yourself in a calming and vibrant underwater world with Aquarium Live Wallpaper by ZeoOwl! Choose from a variety of stunning fish, customize your settings, and enjoy the relaxing ambiance on your Android device. Download now and bring the beauty of the ocean to your home screen!">
-  <meta name="keywords" content="Live Wallpaper, Aquarium Wallpaper, Android Live Wallpaper, Relaxing App, Beautiful Fish, Underwater World, Ocean Theme, Customization, Home Screen, Android App, ZeoOwl">
+  <title>Tropical Island Live Wallpaper | Apps by ZeoOwl</title>
+  <meta name="description" content="Escape to a low-poly paradise with Tropical Island Live Wallpaper! Relax on a stunning beach, explore charming buildings, and find tranquility by the pool. Personalize your island with day and night themes and adjust the animation speed for ultimate relaxation. Download now and let your worries melt away!">
+  <meta name="keywords" content="Tropical Island Live Wallpaper, Live Wallpaper, Low Poly, Relaxation, Escape, Beach, Palm Trees, Buildings, Water Paradise, Day and Night Themes, Animation Speed, Personalization">
 
-  <meta property="og:title" content="Aquarium Live Wallpaper | Apps by ZeoOwl">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://app.zeoowl.com/live-wallpaper/aquarium">
-  <meta property="og:description" content="Immerse yourself in a calming and vibrant underwater world with Aquarium Live Wallpaper by ZeoOwl! Choose from a variety of stunning fish, customize your settings, and enjoy the relaxing ambiance on your Android device. Download now and bring the beauty of the ocean to your home screen!">
-  <meta property="og:image" content="https://app.zeoowl.com/assets/og_live_wallpaper_aquarium.jpg">
+  <meta property="og:title" content="Tropical Island Live Wallpaper | Apps by ZeoOwl" />
+  <meta property="og:description" content="Create your own low-poly island oasis and escape the everyday with Tropical Island Live Wallpaper! Relax on a beautiful beach, explore charming buildings, and find tranquility by the pool.">
+  <meta property="og:image" content="https://app.zeoowl.com/assets/og/live-wallpaper-tropical-island-og-cover.png">
+  <meta property="og:url" content="app.zeoowl.com/live-wallpaper/tropical-island" />
+  <meta property="og:site_name" content="ZeoOwl Link" />
 
-  <meta name="twitter:title" content="Aquarium Live Wallpaper | Apps by ZeoOwl">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://app.zeoowl.com/live-wallpaper/aquarium">
-  <meta name="twitter:description" content="Immerse yourself in a calming and vibrant underwater world with Aquarium Live Wallpaper by ZeoOwl! Choose from a variety of stunning fish, customize your settings, and enjoy the relaxing ambiance on your Android device. Download now and bring the beauty of the ocean to your home screen!">
-  <meta name="twitter:image" content="https://app.zeoowl.com/assets/og_live_wallpaper_aquarium.jpg">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tropical Island Live Wallpaper | Apps by ZeoOwl" />
+  <meta name="twitter:description" content="Create your own low-poly island oasis and escape the everyday with Tropical Island Live Wallpaper! Relax on a beautiful beach, explore charming buildings, and find tranquility by the pool.">
+  <meta name="twitter:image" content="https://app.zeoowl.com/assets/og/live-wallpaper-tropical-island-og-cover.png">
+  <meta name="twitter:site" content="ZeoOwl Link" />
 
   <!-- Styles -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -48,16 +49,18 @@
 <div class="content-wrapper">
   <section class="hero">
     <div class="banner-container">
-      <img src="/assets/images/banner/banner-chess-clock.png" alt="Aquarium Live Wallpaper App Banner">
+      <img src="/assets/og/live-wallpaper-tropical-island-og-cover.png" alt="Tropical Island Live Wallpaper App Banner">
     </div>
     <div class="hero-content">
       <div class="app-details-icon-wrapper">
-        <img src="/assets/images/apps/icon_lwp_aquarium.png" alt="Aquarium Live Wallpaper App Icon" class="app-details-icon">
-        <img src="/assets/images/apps/icon_lwp_aquarium.png" alt="Aquarium Live Wallpaper App Icon" class="app-details-icon app-details-icon-shadow">
+        <img src="/assets/og/live-wallpaper-tropical-island-og-icon.png" alt="Tropical Island Live Wallpaper App Icon" class="app-details-icon">
+        <img src="/assets/og/live-wallpaper-tropical-island-og-icon.png" alt="Tropical Island Live Wallpaper App Icon" class="app-details-icon app-details-icon-shadow">
       </div>
-      <h1 class="app-details-title">Aquarium Live Wallpaper</h1>
-      <p>Time your strategies, track moves, and improve your chess game with our intuitive and precise app.</p>
-      <a href='https://play.google.com/store/apps/details?id=com.zeoowl.lwp.aquarium&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class="play-store-badge">
+      <h1 class="app-details-title">Tropical Island Live Wallpaper</h1>
+      <p>
+        Escape to a low-poly paradise with Tropical Island Live Wallpaper! Relax on a stunning beach, explore charming buildings, and find tranquility by the pool. Personalize your island with day and night themes and adjust the animation speed for ultimate relaxation. Download now and let your worries melt away!
+      </p>
+      <a href='https://play.google.com/store/apps/details?id=com.zeoowl.lwp.tropical.island&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class="play-store-badge">
         <img
           alt='Get it on Google Play'
           src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/>
@@ -78,7 +81,7 @@
       <a href="https://app.zeoowl.com/live-wallpaper/aquarium" class="footer-item">Aquarium LWP</a><br>
       <a href="https://app.zeoowl.com/chess-clock" class="footer-item">Chess Clock</a><br>
       <a href="https://app.zeoowl.com/sudoku" class="footer-item">Sudoku</a><br>
-      <a href="https://app.zeoowl.com/live-wallpaper/haelwic-village" class="footer-item">Haelwic Village LWP</a><br>
+      <a href="https://app.zeoowl.com/live-wallpaper/tropical-island" class="footer-item">Tropical Island LWP</a><br>
       <a href="https://app.zeoowl.com/live-wallpaper/tropical-island" class="footer-item">Tropical Island LWP</a><br>
     </section>
     <section>
